--- a/css/style.css
+++ b/css/style.css
@@ -770,7 +770,7 @@ h6 {
 .section-heading h3 {
     font-size: 14px;
     font-weight: bold;
-    color: #ccc;
+    color: #5a5a5a;
     letter-spacing: 2px;
     padding-bottom: 0;
 }
