--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -22,17 +22,17 @@ body {
 /* Default Link Color */
 
 a, .la-ball-triangle-path {
-    color:#d2b356;
+    color:#172E73;
 }
 
 a:hover, #header.nav-solid nav a:hover {
-    color:#d2b356;
+    color:#172E73;
 }
 
 /* Default Icon Color */
 
 .icon i {
-    color:#d2b356;
+    color:#172E73;
 }
 
 /* .iconimage::before {
@@ -53,11 +53,11 @@ a:hover, #header.nav-solid nav a:hover {
 /* Border Color */
 
 #banner .section-heading:before, .testimonial.classic footer:before {
-    background: #d2b356;
+    background: #172E73;
 }
 
 .pricing-block-content:hover {
-    border-color:#d2b356;
+    border-color:#172E73;
 }
 
 
@@ -83,8 +83,8 @@ a:hover, #header.nav-solid nav a:hover {
 /* Navigation Active State */
 
 #header.nav-solid .active {
-    color: #d2b356;
-    border-color: #d2b356;
+    color: #172E73;
+    border-color: #172E73;
 }    
 
 
@@ -97,7 +97,7 @@ a:hover, #header.nav-solid nav a:hover {
 /* Primary Background and Text Colors */
 
 .primary-color, .featured .pricing {
-    background-color:#d2b356;
+    background-color:#172E73;
 }
 
 .primary-color, .primary-color .section-title, .primary-color .section-subtitle, .featured .pricing, .featured .pricing p {
@@ -105,7 +105,7 @@ a:hover, #header.nav-solid nav a:hover {
 }
 
 .section-heading h2:after {
-    background:#d2b356;
+    background:#172E73;
     content:"";
     display:block;
     width:30px;
@@ -305,8 +305,9 @@ h6 {
 /* Button Hover Color */
 
 .button:hover,  input[type="submit"]:hover {
-    border-color:#d2b356;
-    color:#d2b356;
+    border-color:#172E73;
+    color:#172E73;
+    background-color: #fde56a;
 }
 
 
@@ -332,8 +333,8 @@ h6 {
 /* Button Hover Color */
 
 #banner .button:hover {
-    color:#d2b356;
-    border-color:#d2b356;
+    color:#172E73;
+    border-color:#172E73;
 }
 
 
@@ -345,11 +346,11 @@ h6 {
     font-family: 'Open Sans', sans-serif, Arial, Helvetica;
     font-size:12px;
     font-weight:normal;
-    color:#999;
+    color:#474747;
 }
 
 /* Footer Icon Color */
 
 #landing-footer i {
-    color:#999;
+    color:#5e5e5e;
 }
